src/FinancialForce Accounting/objects/codaCurrencyRevaluationGroup__c.object
<CustomObject>
    <customHelpPage>codahelpcurrencyrevaluation</customHelpPage>
    <description>Groups currency revaluations to be processed as a batch.</description>
    <fields>
        <fullName>AllGLAs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Revalue all eligible GLAs.</description>
        <label>All GLAs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autopost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>Group Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevalueHomeCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we revalue the home currency?</description>
        <label>Revalue Home Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledTime__c</fullName>
        <description>The time at which this group has been scheduled to run.</description>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DisplayName__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRGP{000000}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>